[gd_scene load_steps=12 format=3 uid="uid://d8sfvq5gx1q7"]

[ext_resource type="Script" path="res://main.gd" id="1_71uem"]
[ext_resource type="PackedScene" uid="uid://c474lcei5u4ix" path="res://player.tscn" id="2_gmwq6"]
[ext_resource type="PackedScene" uid="uid://wx3d2fb16da3" path="res://wall.tscn" id="4_cyr6k"]
[ext_resource type="PackedScene" uid="uid://l87auxx0eo2v" path="res://turret.tscn" id="4_ggnuh"]
[ext_resource type="PackedScene" uid="uid://cw6rxmd0cy6le" path="res://portal.tscn" id="4_wyl24"]
[ext_resource type="Texture2D" uid="uid://dxxqvr0i5nt2d" path="res://Art/HP_BAR.png" id="6_jsbnd"]
[ext_resource type="PackedScene" uid="uid://ctc7g4bnxy8wg" path="res://defeat_screen.tscn" id="6_sx1sl"]
[ext_resource type="Script" path="res://health_bar.gd" id="7_nn4md"]
[ext_resource type="AudioStream" uid="uid://dk7by4ggncne" path="res://audio/level_theme (1).wav" id="7_r5daq"]
[ext_resource type="PackedScene" uid="uid://cpq6piv00e7vf" path="res://title_screen.tscn" id="8_2r0vw"]
[ext_resource type="PackedScene" uid="uid://dh7mjcajvs7yl" path="res://victory_screen.tscn" id="11_vv6oe"]

[node name="Main" type="Node"]
script = ExtResource("1_71uem")
wall_scene = ExtResource("4_cyr6k")
turret_scene = ExtResource("4_ggnuh")
portal_scene = ExtResource("4_wyl24")

[node name="Player" parent="." instance=ExtResource("2_gmwq6")]
position = Vector2(16, 0)

[node name="MainCamera" type="Camera2D" parent="."]
limit_left = -500

[node name="LevelLabel" type="Label" parent="MainCamera"]
z_index = 3
offset_left = 200.0
offset_top = -168.0
offset_right = 305.0
offset_bottom = -112.0
theme_override_font_sizes/font_size = 28
text = "level 1"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="Sprite2D" parent="MainCamera"]
z_index = 6
z_as_relative = false
texture_filter = 1
position = Vector2(-256, -152)
texture = ExtResource("6_jsbnd")
script = ExtResource("7_nn4md")

[node name="HealthMeter" type="ColorRect" parent="MainCamera/HealthBar"]
z_index = 4
z_as_relative = false
offset_left = -48.0
offset_top = -12.0
offset_right = 50.0
offset_bottom = 11.0
color = Color(1, 0, 0, 1)

[node name="DefeatScreen" parent="." instance=ExtResource("6_sx1sl")]

[node name="level_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_r5daq")

[node name="TitleScreen" parent="." instance=ExtResource("8_2r0vw")]

[node name="VictoryScreen" parent="." instance=ExtResource("11_vv6oe")]

[connection signal="damage_taken" from="Player" to="." method="_on_player_damage_taken"]
[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="restart" from="DefeatScreen" to="." method="_on_defeat_screen_restart"]
[connection signal="game_started" from="TitleScreen" to="." method="_on_title_screen_game_started"]
[connection signal="victory_finished" from="VictoryScreen" to="." method="_on_victory_screen_victory_finished"]
